Add bands section

--- a/themes/vicesinc/layouts/partials/header.html
+++ b/themes/vicesinc/layouts/partials/header.html
@@ -3,4 +3,13 @@
     class="hero"
     src="/images/vices-music-festival-2024-header.png"
     alt="Vices Music Festival 2024" />
+    <nav class="menu-wrap">
+      <div class="menu-container container">
+        <ul class="menu main-menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/bands">Bands</a></li>
+          <li><a href="/tickets">Tickets</a></li>
+        </ul>
+      </div>
+    </nav>
 </header>
