--- a/themes/vicesinc/layouts/special/bands.html
+++ b/themes/vicesinc/layouts/special/bands.html
@@ -3,6 +3,6 @@
 {{ .Title }} – {{ .Site.Title }}
 {{ end }}
 {{ define "main" }}
-<h1 class="section-heading">{{ .Title }}</h1>
+{{- partial "bands.html" . -}}
 {{- .Content -}}
 {{ end }}
