--- a/themes/vicesinc/layouts/_default/single.html
+++ b/themes/vicesinc/layouts/_default/single.html
@@ -4,5 +4,7 @@
 {{ end }}
 {{ define "main" }}
 <h1 class="section-heading">{{ .Title }}</h1>
-{{- .Content -}}
+<div class="container">
+  {{- .Content -}}
+</div>
 {{ end }}
