--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -6,7 +6,7 @@
 <main>
   <section class="container">
     <h1 class="section-heading">Vices Music Festival 2024</h1>
-    <p class="center">Vices Music Festival is a music festival that takes place in Portland Maine on March 9, 2024. We aim to showcase amazing indie bands from the North East.</p>
+    <p class="center">Vices Music Festival is a music festival that takes place at Portland Maine on March 9, 2024. We aim to showcase amazing indie bands from the North East.</p>
   </section>
   {{- partial "bands.html" . -}}
 </main>
