--- a/themes/vicesinc/layouts/partials/header.html
+++ b/themes/vicesinc/layouts/partials/header.html
@@ -7,7 +7,7 @@
       <div class="menu-container container">
         <ul class="menu main-menu">
           <li><a href="/">Home</a></li>
-          <li><a href="/bands">Bands</a></li>
+          <li><a href="/schedule">Schedule</a></li>
           <li><a href="/tickets">Tickets</a></li>
         </ul>
       </div>
