--- a/themes/vicesinc/layouts/_default/single.html
+++ b/themes/vicesinc/layouts/_default/single.html
@@ -4,7 +4,7 @@
 {{ end }}
 {{ define "main" }}
 <h1 class="section-heading">{{ .Title }}</h1>
-<div class="container">
+<div class="container center">
   {{- .Content -}}
 </div>
 {{ end }}
