--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -9,5 +9,10 @@
     <p class="center">Vices Music Festival hosted by Maine's very own Vices Inc is coming to you March 9th at The Cavern on Free Street in Portland. Featuring bands from all over the Northeast. <a href="http://southie-heights.ticketleap.com/vices-fest-2024/" target="_blank">Advanced tickets</a> are only 10 dollars. A free poster is included with a ticket purchase. You must be 18 or over to enter. Food and bar available all day. Doors open at 12pm. We aim to showcase amazing indie bands from the North East.</p>
   </section>
   {{- partial "bands.html" . -}}
+  <section class="container center">
+    <h2 class="section-heading">Film</h2>
+    <p class="center">Filmed and documented by Henry Riley Productions.</p>
+    <img src="/images/hrp-film.png" alt="" />
+  </section>
 </main>
 {{ end }}
