--- a/themes/vicesinc/layouts/partials/bands.html
+++ b/themes/vicesinc/layouts/partials/bands.html
@@ -1,6 +1,7 @@
 <section class="container">
   <h2 class="section-heading">Bands</h2>
-  <div class="band-list">
+  <p class="center">Coming soon</p>
+  <!--<div class="band-list">
     {{ range $.Site.Data.list.bands.items }}
       <div class="band">
         <a class="band-logo-wrap" href="/bands/{{ .link }}">
@@ -12,5 +13,5 @@
         <h3 class="band-name"><a href="/bands/{{ .link }}">{{ .name }}</a></h3>
       </div>
     {{ end }}
-  </div>
+  </div>-->
 </section>
