--- a/themes/vicesinc/layouts/partials/header.html
+++ b/themes/vicesinc/layouts/partials/header.html
@@ -1,9 +1,9 @@
 <header class="header">
   <img
     class="hero"
-    src="/images/vices-music-festival-2024-header.png"
-    alt="Vices Music Festival 2024" />
-    <nav class="menu-wrap">
+    src="/images/VicesFest2.png"
+    alt="Vices Music Festival II" />
+    <!--<nav class="menu-wrap">
       <div class="menu-container container">
         <ul class="menu main-menu">
           <li><a href="/">Home</a></li>
@@ -11,5 +11,5 @@
           <li><a href="/tickets">Tickets</a></li>
         </ul>
       </div>
-    </nav>
+    </nav>-->
 </header>
