Updates for VicesFest 2025

--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -5,14 +5,19 @@
 {{ define "main" }}
 <main>
   <section class="container">
-    <h1 class="section-heading">VicesFest II</h1>
-    <p class="center">Vices Music Festival hosted by Maine's very own Vices Inc is coming to you November 1st, 2nd and 3rd at The Cavern on Free Street in Portland. Featuring bands from all over the Northeast. <!--<a href="http://southie-heights.ticketleap.com/vices-fest-2024/" target="_blank">Advanced tickets</a> are only 10 dollars. A free poster is included with a ticket purchase. You must be 18 or over to enter. Food and bar available all day. Doors open at 12pm. We aim to showcase amazing indie bands from the North East.</p>-->
+    <h1 class="section-heading">VicesFest 2025</h1>
+    <p class="center">Come join us for an amazing weekend this summer at The Strand Theater. Featuring bands from all over the USA and beyond.</p>
+    <p class="center">If you want to participate or perform at this years VicesFest, please send your info to <a href="mailto:submissions@vicesfest.com">submissions@vicesfest.com</a></p>
+    <p class="center">Cut off date to submit your material is May 2nd. All submissions will be reviewed by our staff and you will be contacted if you are picked.</p>
+    <p class="center">If you or your company are looking to be part of the sponsorship board, please email <a href="mailto:j.hicks@vicesfest.com">j.hicks@vicesfest.com</a> for more details.</p>
+    <p class="center">The festival will be filmed for a documentary that will be featured on Prime and on other platforms.</p>
+    <p class="center">Many more details will be coming soon, so please keep looking for updates.</p>
   </section>
-  {{- partial "bands.html" . -}}
-  <section class="container center">
+  <!--{{- partial "bands.html" . -}}-->
+  <!--<section class="container center">
     <h2 class="section-heading">Film</h2>
     <p class="center">Filmed and documented by Henry Riley Productions.</p>
     <img src="/images/hrp-film.png" alt="" />
-  </section>
+  </section>-->
 </main>
 {{ end }}
