--- a/themes/vicesinc/layouts/partials/header.html
+++ b/themes/vicesinc/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <img
     class="hero"
-    src="/images/VicesFest2.png"
-    alt="Vices Music Festival II" />
+    src="/images/VicesFest2025.png"
+    alt="VicesFest 2025 - Dover, New Hampshire - August 29-30-31" />
     <!--<nav class="menu-wrap">
       <div class="menu-container container">
         <ul class="menu main-menu">
