VicesFest 2025 initial commit

--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -4,14 +4,29 @@
 {{ end }}
 {{ define "main" }}
 <main>
-  <section class="container">
+  <section class="container center">
     <h1 class="section-heading">VicesFest 2025</h1>
-    <p class="center">Come join us for an amazing weekend this summer at The Strand Theater. Featuring bands from all over the USA and beyond.</p>
-    <p class="center">If you want to participate or perform at this years VicesFest, please send your info to <a href="mailto:submissions@vicesfest.com">submissions@vicesfest.com</a></p>
-    <p class="center">Cut off date to submit your material is May 2nd. All submissions will be reviewed by our staff and you will be contacted if you are picked.</p>
-    <p class="center">If you or your company are looking to be part of the sponsorship board, please email <a href="mailto:j.hicks@vicesfest.com">j.hicks@vicesfest.com</a> for more details.</p>
-    <p class="center">The festival will be filmed for a documentary that will be featured on Prime and on other platforms.</p>
-    <p class="center">Many more details will be coming soon, so please keep looking for updates.</p>
+    <p>Welcome to <strong>VicesFest 2025!</strong> Join us at <strong>The Strand Theater in Dover New Hampshire</strong> for three days filled with fun, music, and indulgence. Come and see your new favorite musicians in a safe lively atmosphere. From live music, vendors, delicious food and drinks to exciting activities, VicesFest has something for everyone. Get ready to let loose and enjoy a weekend of pure entertainment. Don't miss out on this unforgettable experience - mark your calendars now!</p>
+  </section>
+  <section class="container center">
+    <h2 class="section-heading">Bands</h2>
+    <p>Vices Inc - Sygnal to Noise - Sepsis - TheWorst - TRAWL - Euphemia - The Roscoes - Night Fury - Jonee Earthquake Band - Battlemode - Plague Dad - Manuel Alakas Angels - Under the Horizon - House Lights - Mango Catch - Separatr - Willie Dinardo & The Corporates - The Shirts and Shoes - The Carrot Flowers - Silver Chord - The Living Space - Trading Tombstones - Cryin Caleb - 25% Vegan - Jake Herbert - Peter Gay - Adam Vitali - Fine Pioneer - Bradys Grownup Time</p>
+    <p>and more TBA!</p>
+    <p><a class="button" href="/bands">Learn More About the Bands</a></p>
+  </section>
+  <section class="container center">
+    <h2 class="section-heading">Tickets</h2>
+    <p>Tickets for VicesFest 2025 go on sale on July 12th. Buy individual days for <strong>$20</strong> each or all three days for only <strong>$40</strong>. Three day passes also include a free gift!</p>
+    <p><a class="button" href="https://vicesfest2025.eventbrite.com" target="_blank">Buy Tickets Now</a></p>
+  </section>
+  <section class="container center">
+    <h2 class="section-heading">Perform at VicesFest</h2>
+    <p>We have a few open slots still available! Please contact us immediately at <a href="mailto:submissions@vicesfest.com" target="_blank">submissions@vicesfest.com</a> if you wish to perform at VicesFest!</p>
+  </section>
+  <section class="container center">
+    <h2 class="section-heading">Vendors</h2>
+    <p>If you are a vendor and would like to set up a booth at VicesFest please contact Jagger at <a href="mailto:j.hicks@vicesfest.com" target="_blank">j.hicks@vicesfest.com</a>.</p>
+    <p>There are only a limited amount of booth spaces left so don't delay!</p>
   </section>
   <!--{{- partial "bands.html" . -}}-->
   <!--<section class="container center">
