--- a/themes/vicesinc/layouts/partials/header.html
+++ b/themes/vicesinc/layouts/partials/header.html
@@ -3,13 +3,14 @@
     class="hero"
     src="/images/VicesFest2025.png"
     alt="VicesFest 2025 - Dover, New Hampshire - August 29-30-31" />
-    <!--<nav class="menu-wrap">
+    <nav class="menu-wrap">
       <div class="menu-container container">
         <ul class="menu main-menu">
           <li><a href="/">Home</a></li>
+          <li><a href="/bands">Bands</a></li>
           <li><a href="/schedule">Schedule</a></li>
-          <li><a href="/tickets">Tickets</a></li>
+          <li><a href="https://vicesfest2025.eventbrite.com" target="_blank">Tickets</a></li>
         </ul>
       </div>
-    </nav>-->
+    </nav>
 </header>
