--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -6,7 +6,7 @@
 <main>
   <section class="container center">
     <h1 class="section-heading">VicesFest 2025</h1>
-    <p>Welcome to <strong>VicesFest 2025!</strong> Join us at <strong>The Strand Theater in Dover New Hampshire</strong> for three days filled with fun, music, and indulgence. Come and see your new favorite musicians in a safe lively atmosphere. From live music, vendors, delicious food and drinks to exciting activities, VicesFest has something for everyone. Get ready to let loose and enjoy a weekend of pure entertainment. Don't miss out on this unforgettable experience - mark your calendars now!</p>
+    <p>Welcome to <strong>VicesFest 2025!</strong> Join us at <strong><a href="/location">The Strand Dover</a></strong> for three days filled with fun, music, and indulgence. Come and see your new favorite musicians in a safe lively atmosphere. From live music, vendors, delicious food and drinks to exciting activities, VicesFest has something for everyone. Get ready to let loose and enjoy a weekend of pure entertainment. Don't miss out on this unforgettable experience - mark your calendars now!</p>
   </section>
   <section class="container center">
     <h2 class="section-heading">Bands</h2>
