Update band list

--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -10,8 +10,7 @@
   </section>
   <section class="container center">
     <h2 class="section-heading">Bands</h2>
-    <p>Vices Inc - Sygnal to Noise - Sepsis - TheWorst - TRAWL - Euphemia - The Roscoes - Night Fury - Jonee Earthquake Band - Battlemode - Plague Dad - Manuel Alakas Angels - Under the Horizon - House Lights - Mango Catch - Separatr - Willie Dinardo & The Corporates - The Shirts and Shoes - The Carrot Flowers - Silver Chord - The Living Space - Trading Tombstones - Cryin Caleb - 25% Vegan - Jake Herbert - Peter Gay - Adam Vitali - Fine Pioneer - Bradys Grownup Time</p>
-    <p>and more TBA!</p>
+    <p>Vices Inc - Sygnal to Noise - Sepsiss - TRAWL - Euphemia - The Roscoes - Night Fury - Lions and Lavender - Scarecrow Hill - Jonee Earthquake Band - Battlemode - Plague Dad - MANUEL - Alaska's Angels - Under the Horizon - House Lights - Mango Catch - Separatr - Willie Dinardo & The Corporates - The Shirts and Shoes - The Carrot Flowers - Silver Chord - The Living Space - Trading Tombstones - Cryin Caleb - 25% Vegan - Jake Herbert - Peter Gay - Adam Vitali - Fine Pioneer - Boyd & the Monkeys - Mother Nimbus - The Joe Belanger Shred Trio - Brady's Grownup Time - Decaying Continuum - Cellar Door</p>
     <p><a class="button" href="/bands">Learn More About the Bands</a></p>
   </section>
   <section class="container center">
