Fix header / add comedy / MC info

--- a/themes/vicesinc/layouts/index.html
+++ b/themes/vicesinc/layouts/index.html
@@ -6,7 +6,8 @@
 <main>
   <section class="container center">
     <h1 class="section-heading">VicesFest 2025</h1>
-    <p>Welcome to <strong>VicesFest 2025!</strong> Join us at <strong><a href="/location">The Strand Dover</a></strong> for three days filled with fun, music, and indulgence. Come and see your new favorite musicians in a safe lively atmosphere. From live music, vendors, delicious food and drinks to exciting activities, VicesFest has something for everyone. Get ready to let loose and enjoy a weekend of pure entertainment. Don't miss out on this unforgettable experience - mark your calendars now!</p>
+    <p>Welcome to <strong>VicesFest 2025!</strong> Join us at <strong><a target="_blank" href="https://www.google.com/maps/dir//20+Third+St,+Dover,+NH+03820/@43.1982824,-70.9574357,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e29710f2e4f3b7:0xebc88536383a9612!2m2!1d-70.8750187!2d43.1983895?entry=ttu&g_ep=EgoyMDI1MDgxOC4wIKXMDSoASAFQAw%3D%3D">The Strand Dover</a></strong> for three days filled with fun, music, and indulgence. Come and see your new favorite musicians in a safe lively atmosphere. From live music, vendors, delicious food and drinks to exciting activities, VicesFest has something for everyone. Get ready to let loose and enjoy a weekend of pure entertainment. Don't miss out on this unforgettable experience - mark your calendars now!</p>
+    <p>Event MCed by Frank Gallagher. Stand-up comedy between sets provided by Jenn Rose.</p>
   </section>
   <section class="container center">
     <h2 class="section-heading">Bands</h2>
